--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -74,12 +73,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Quicksand-Bold
+      fonts:
+        - asset: assets/font/Quicksand-Bold.ttf
+    - family: Quicksand-Light
+      fonts:
+        - asset: assets/font/Quicksand-Light.ttf
+    - family: Quicksand-Medium
+      fonts:
+        - asset: assets\font\Quicksand-Medium.ttf
+    - family: Quicksand-Regular
+      fonts:
+        - asset: assets\font\Quicksand-Regular.ttf
+   
+        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
