--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_calendar_carousel: ^2.4.4
   simple_circular_progress_bar: ^1.0.2
+  animated_splash_screen:
 
 dev_dependencies:
   flutter_test:
