--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_calendar_carousel: ^2.4.4
   simple_circular_progress_bar: ^1.0.2
   animated_splash_screen:
+  flutter_screenutil:
 
 dev_dependencies:
   flutter_test:
