--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,11 @@ dependencies:
   lottie: 
   permission_handler:
   video_player:
-  firebase_auth: ^5.3.0 
+  firebase_auth:
   firebase_core: 
+  cloud_firestore:
+  shared_preferences: 
+  skeletonizer: ^1.4.2
 
 
 dev_dependencies:
