--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,9 @@ dependencies:
   skeletonizer: ^1.4.2
   firebase_storage: ^12.3.1
   path: 
-  image_downloader: ^0.31.0
+  # image_downloader:
   modal_progress_hud_nsn: ^0.5.1
+  cached_network_image: 
 
 
 dev_dependencies:
