Weight page alteration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,11 @@ dependencies:
   chat_gpt_sdk: 
   dash_chat_2: 
   flutter_gemini: 
-  image_picker: 
+  image_picker: ^1.1.2 
   lottie: 
   permission_handler:
   video_player:
+  shared_preferences: ^2.3.2
 
 
 dev_dependencies:
