--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.3.2
   http: ^1.2.2
   pedometer: ^4.0.2
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_launcher_icons:
