--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   convert: ^3.1.2
+  auto_scroll_text: ^0.0.7
 
 dev_dependencies:
   ? flutter_launcher_icons
